    - replaced valid enum values for property "role" in "voluntarilyInsuredPersons"
    - renamed property "voluntarilyInsuredPersons" to "personMentionedByName"
    - removed property "personsConnectionEmployer"
    - added mandatory property "previousInsurer" (moved from OfferNlpiRequestDataType)
    - Added mandatory property "riskCharacteristic" (moved from CompanyCustomerType)
- OfferRequestUVGZType (Changed)
    - Added mandatory property "riskCharacteristic" (moved from CompanyCustomerType)
    - renamed "insuranceOptionsVarious" to "insuranceOptions"
    - changed type of "insuranceOptions" to "UVGZInsuranceOptionsType"
    - added mandatory property "previousInsurer" (moved from OfferNlpiRequestDataType)
- OfferUVGOType (Changed)
    - removed max size restriction for voluntarilyInsuredPersons
    - replaced valid enum values for property "role" in "voluntarilyInsuredPersons"
    - renamed property "voluntarilyInsuredPersons" to "personMentionedByName"
    - removed property "personsConnectionEmployer"
    - added mandatory property "riskCharacteristic"
    - property "annualCancellation" in "insuranceOptionsVarious" is mandatory
    - added mandatory property "premiumOverviewUVGCompulsory"
- OfferUVGZType (Changed)
    - added mandatory property "riskCharacteristic"
- PayInstalmentType (Changed)
    - capitalized enum value "anually"
- PayrollBasisType
    - capitalized enum value 'total wage'
- PayrollEmployeesType (Added)
- PensionSalaryType (Added)
- PensionBenefitPeriodType (Added)
- PreviousInsurerType
    - "insurerCode" is now mandatory
    - renamed "insuranceStartDate" to "beginningPreInsuranceDate"
    - renamed "insuranceEndDate" to "endPreInsuranceDate"
- RiskCharacteristicType (Added)
- SUVACompanyType (Added)
- UVGOCoverageType
    - replaced enum values
- UVGOFixedPayrollsType (Changed)
    - Renamed to UVGOPersonType
    - Added optional property "degreeOfEmployment"
    - Added mandatory property "insuranceType"